# alertbase

./: .gitattributes  .gitignore  .readthedocs.yml  Makefile  README.md  gen.py  go.mod  go.sum  setup.cfg
alertdb/: alertdb.go  meta.go
bench/: META.json  add-alert  n-alerts  n-files
benchutil/: blobstoreimplementation_string.go  ctx.go  executionenvironment_string.go  gen.go  indexdbimplementation_string.go  logger.go  querytype_string.go
blobstore/: blobstore.go  gcs_blobstore.go  s3_blobstore.go
cmd/alertbase-gcp-ingest/: main.go
cmd/alertbase-ingest/: main.go
cmd/alertbase-query/: main.go  output.go  queries.go
cmd/bench_ingest/: main.go
doc/: benchmarking.md  design.md  experimentation_log.md
docs/: api.rst  conf.py  db_creation.rst  design.rst  index.rst  install.rst  requirements.txt  usage.rst
go/: .gitignore  README.md  go.mod
go/alertdb/: alertdb.go  meta.go
go/benchutil/: env.go  healpixorderingscheme_string.go  indexdbtype_string.go  logger.go
go/blobstore/: iterator.go  s3_blobstore.go
go/doc/: experimentation_log.md
go/indexdb/: bytes.go
go/schema/: alert.go  array_prv_candidate.go  candidate.go  cutout.go  prv_candidate.go  (+2 more)
indexdb/: bytes.go  indexdb.go
schema/: alert.go  alert_container.go  candidate_container.go  cutout_container.go  union_null_array_prv_candidate.go  union_null_cutout.go  union_null_float.go  union_null_int.go  union_null_long.go  union_null_string.go
test/: test_alert.py  test_blobstore.py  test_db.py  test_dbmeta.py  test_encoding.py  test_index.py  test_tarfile.py
testdata/: .gitattributes
(+27 files in other folders)
