[metadata]
name = alertbase
version = 0.0.1-alpha
description = ZTF Alert Database
long_description = file: README.md
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
author = Spencer Nelson
author_email = swnelson@uw.edu

[options]
package_dir=
    =src
packages=find:
install_requires =
    healpy==1.14.0
    plyvel==1.3.0
    avro>=1.10
    boto3>=1.16

[options.extras_require]
dev =
    flake8
    black
    mypy
    pytest
    sphinx
    data-science-types
    ipython==7.19.0
    jedi<0.18 # Version specifier is because ipython v7.19.0 is incompatible with jedi 0.18; see https://github.com/ipython/ipython/issues/12780.


[options.packages.find]
where=src

[options.package_data]
alertbase = py.typed

[mypy]
python_version = 3.8
warn_return_any = True
mypy_path = devconfig/typestubs

[mypy-plyvel]
ignore_missing_imports = True

[mypy-astropy.*]
ignore_missing_imports = True

[mypy-avro.*]
ignore_missing_imports = True

[mypy-boto3.*]
ignore_missing_imports = True

[flake8]
max-line-length = 88
